Public export of Nexus code:   - 38615fd76b4b75ac99ba2d10513e555ad40567d0 by Igor Serdyuchenko <iserdyuchenko@sonatype.com>
GitOrigin-RevId: 38615fd76b4b75ac99ba2d10513e555ad40567d0